<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scrawler"
            android:icon="@drawable/ic_material_bug"
            android:title="@string/title_activity_scrawlers" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_activity_scrapers" />
    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_material_settings"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
