<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_page">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*">

            <!-- title -->
            <TableRow>

                <TextView
                    android:id="@+id/pageTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:text="@string/page_title"
                    android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

                <TextView
                    android:id="@+id/pageTitleValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:text="TextView" />
            </TableRow>

            <!-- Description -->
            <TableRow>

                <TextView
                    android:id="@+id/pageDescriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:text="@string/page_description"
                    android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

                <TextView
                    android:id="@+id/pageDescriptionValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:text="TextView"
                    tools:text="@string/lorem" />
            </TableRow>

            <!-- Description -->
            <TableRow>

                <TextView
                    android:id="@+id/pageKeywordsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/page__keywords"
                    android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

                <TextView
                    android:id="@+id/pageKeywordsValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="TextView" />
            </TableRow>


        </TableLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
